--- a/UT1/frontend/index.html
+++ b/UT1/frontend/index.html
@@ -235,7 +235,6 @@
 
                 </div>
             </div>
-            <div class="col"></div>
             <div class="col-sm-12">
                 <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
                     id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
@@ -244,13 +243,35 @@
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        <a href="#">Crear nueva tarjeta</a>
                         <a href="#" role="button" onclick="changeBackground();">Joke Generator</a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        <!-- <div id="forms-container" class="row">
+            <div class="form-div">
+                <form id="getUser">
+                    <h6>Search user:</h6>
+                    <label for="idUserGet">Usuario:</label>
+                    <input type="text" name="idUserGet" id="id">
+                    <input type="submit" value="Send" class="btn btn-secondary" style="height: min-content;">
+                </form>
+                <p id="getText">Info User:</p>
+            </div>
+            <div class="form-div">
+                <form id="postUser">
+                    <h6>Create user:</h6>
+                    <label for="nameUserCreate">First Name:</label>
+                    <input type="text" name="nameUserCreate" id="firstName">
+                    <label for="lNameUserCreate">Last Name:</label>
+                    <input type="text" name="lNameUserCreate" id="lastName">
+                    <label for="ageUserCreate">Age:</label>
+                    <input type="text" name="ageUserCreate" id="age">
+                    <input type="submit" value="Send" class="btn btn-secondary" style="height: min-content;">
+                </form> 
+                <p id="postText">Info user</p>
+            </div>
+        </div>
+    </div> -->
 </body>
-
 </html>
